# nuro-ftl-segment-receipts

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
docs/: NURO_OUTREACH.md  PROMOTION.md
examples/models/: branch.graph.json  branch.onnx  chain.graph.json  chain.onnx  decomposed-trap.onnx  multi_output.graph.json  multi_output.onnx  resnet18-mini.onnx
examples/rules/: default.yaml  fp32_breaker.yaml  merge_demo.yaml  multi_gpu.yaml
receipts/.scan_work/: augmented.onnx
receipts/branch/: receipt.html  receipt.json
receipts/branch_launch/: merge_diff.json  receipt.html  receipt.json
receipts/demo/: receipt.html  receipt.json
receipts/launch_scan/: regression_report.html  regression_report.json
receipts/merge_launch/: merge_diff.json  receipt.html  receipt.json
scripts/: deployproof-demo.sh  publish-site.sh  sync-demo.sh
segment_receipts/: __init__.py  augment.py  cli.py  deployproof.py  doctor.py  early_publish.py  golden.py  gpu_split.py  graph.py  latency.py  merge_diff.py  models.py  parity.py  pipeline.py  planner.py  regression.py  regression_report.py  report.py  rules.py  segmenter.py  store.py  toy_models.py
site/: app.js  charts.js  index.html  styles.css
site/data/: deployproof.json  doctor.json  manifest.json  receipt.json  regression_report.json  scenarios.json  summary.json
site/demo/: receipt.html  (+7 more)
tests/: test_cli.py  test_deployproof.py  test_gpu_early.py  test_graph.py  test_merge_diff.py  test_parity.py  test_pipeline.py  test_regression.py  test_rules.py  test_segmenter.py  test_site.py
(+30 files in other folders)
