[project]
name = "nuro-ftl-segment-receipts"
version = "1.0.0"
description = "ONNX segment + parity audit harness inspired by Nuro's published FTL compiler architecture."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Enaguthi" }]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
onnx = ["onnx>=1.16", "onnxruntime>=1.17"]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
segment-receipts = "segment_receipts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["segment_receipts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "receipts", "agent"]
